--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -17,21 +17,18 @@
       <script>
         let buttons = document.querySelectorAll(".delItem");
         for(let i=0; i<buttons.length; i++){
-          buttons[i].addEventListener("click", async function(){
-            // console.log(buttons[i].value)
-            try {     
-              const response = await fetch('/users/menu/del', {
+          buttons[i].addEventListener("click", function() {
+            // console.log(buttons[i].value)     
+              const response = fetch('/users/menu/del', {
                 method: 'post',
-                body: {
+                body: JSON.stringify({
                   value: buttons[i].value
-                },
+                }),
                 headers: { 'Content-Type': 'application/json' },
               });
               console.log('Completed!', response);
-            } catch(err) {
-              console.error(`Error: ${err}`);
-          }
-        });
+            } 
+        );
       }
 
 
