--- a/views/publicMenu.ejs
+++ b/views/publicMenu.ejs
@@ -14,6 +14,8 @@
           </li>
         <% } %>
 </ul>
+<img alt="Menu barcode"
+     src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=<%= barcode %>" >
 </div>
 
 <!-- <div class="container row d-flex justify-content-center">
