need to implement order page

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -19,7 +19,7 @@
         if ( window.history.replaceState ) {
         window.history.replaceState( null, null, window.location.href );
         }
-
+        //Post call to delete item:
         let buttons = document.querySelectorAll(".delItem");
         for(let i=0; i<buttons.length; i++){
           buttons[i].addEventListener("click", function() {
