menu looks decent, need to update dashboard and menu add

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,7 @@
     <title>Nodejs Passport</title>
   </head>
   <body>
+    <%- include("./partials/navbar.ejs"); -%> 
     <div class="container">
         <%- body %>
     </div>
