--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,7 +1,5 @@
-<!-- <h1 class="mt-4">Menu</h1> -->
 
-
-<p class="lead mb-3">Welcome <%= name %> </p>
+<p class="lead mb-3 pt-3">Welcome <%= name %> </p>
 <div class="row mt-5">
   <div class="card card-body">
     <!-- <div class="col-md-6 m-auto"> -->
