--- a/views/publicMenu.ejs
+++ b/views/publicMenu.ejs
@@ -1,13 +1,9 @@
-
-
-<h1 class="mt-4">Menu by <bold> <%= name %></bold></h1>
-
-<div class="container row d-flex justify-content-center">
+<div class="container row d-inline justify-content-center">
 <ul class="card list-group">
     <!-- <div class="col-md-6 m-auto"> -->
-        <p class="lead mb-3 text-center">Menu</p>
+        <h1 class="mt-4 text-center">Menu by <bold> <%= name %></bold></h1>
         <% for (let i=0; i<menu.length; i++){ %>
-          <li class="list-group-item">
+          <li class="list-group-item text-center">
               <span class="lead mb-3"> <%= menu[i].itemName %> - </span>
               <span class="lead mb-3">₹ <%= menu[i].itemPrice %> </span>
               <button class="orderItem" value="<%= menu[i].itemName %>">Order this!</button>
@@ -15,7 +11,9 @@
         <% } %>
 </ul>
 <img alt="Menu barcode"
-     src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=<%= barcode %>" >
+     src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=<%= barcode %>"
+     class="rounded mx-auto d-block pt-5 pb-2" >
+     <p class="text-muted text-center">scan to open the menu on your phone!</p>
 </div>
 <script>
   // prevent form resubmission
