--- a/views/publicMenu.ejs
+++ b/views/publicMenu.ejs
@@ -5,12 +5,53 @@
         <h1 class="mt-4 text-center">Your table is : <%= table %></h1>
         <% for (let i=0; i<menu.length; i++){ %>
           <li class="list-group-item text-center">
-              <span class="lead mb-3"> <%= menu[i].itemName %> - </span>
-              <span class="lead mb-3">₹ <%= menu[i].itemPrice %> </span>
+              <span class="lead mb-3 item-name"> <%= menu[i].itemName %> - </span>
+              <span class="lead mb-3 item-price">₹ <%= menu[i].itemPrice %> </span>
               <button class="orderItem" value="<%= menu[i].itemName %>">Order this!</button>
           </li>
         <% } %>
 </ul>
+
+<!-- cart -->
+<section class="card row d-flex">
+            <h2 class="section-header d-block mx-auto">CART</h2>
+            <div class="cart-row d-block mx-auto">
+                <span class="cart-item cart-header cart-column">ITEM</span>
+                <span class="cart-price cart-header cart-column">PRICE</span>
+                <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+            </div>
+            <div class="cart-items d-block mx-auto">
+                <div class="cart-row">
+                    <div class="cart-item cart-column">
+                        <img class="cart-item-image" src="Images/Shirt.png" width="100" height="100">
+                        <span class="cart-item-title">T-Shirt</span>
+                    </div>
+                    <span class="cart-price cart-column">$19.99</span>
+                    <div class="cart-quantity cart-column">
+                        <input class="cart-quantity-input" type="number" value="1">
+                        <button class="btn btn-danger" type="button">REMOVE</button>
+                    </div>
+                </div>
+                <div class="cart-row">
+                    <div class="cart-item cart-column">
+                        <img class="cart-item-image" src="Images/Album 3.png" width="100" height="100">
+                        <span class="cart-item-title">Album 3</span>
+                    </div>
+                    <span class="cart-price cart-column">$9.99</span>
+                    <div class="cart-quantity cart-column">
+                        <input class="cart-quantity-input" type="number" value="2">
+                        <button class="btn btn-danger" type="button">REMOVE</button>
+                    </div>
+                </div>
+            </div>
+            <div class="cart-total">
+                <strong class="cart-total-title">Total</strong>
+                <span class="cart-total-price">$39.97</span>
+            </div>
+            <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+        </section>
+
+
 <img alt="Menu barcode"
      src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=<%= barcode %>"
      class="rounded mx-auto d-block pt-5 pb-2" >
@@ -25,26 +66,136 @@
   
   //Post call to delete item:
   let buttons = document.querySelectorAll(".orderItem");
-  for(let i=0; i<buttons.length; i++){
-    buttons[i].addEventListener("click", function() {
-      // console.log(buttons[i].value)     
-        const response = fetch('/menu/order', {
-          method: 'post',
-          body: JSON.stringify({
-            value: buttons[i].value,
-            table: table,
-          }),
-          headers: { 'Content-Type': 'application/json' },
-        });
-        console.log('Completed!', response);
-        // window.reload();
-        // location.reload();
+  for(let i = 0; i < buttons.length; i++) {
+    buttons[i].addEventListener("click", addToCartClicked);
+  }
+//   for(let i=0; i<buttons.length; i++){
+//     buttons[i].addEventListener("click", function() {
+//       // console.log(buttons[i].value)     
+//         const response = fetch('/menu/order', {
+//           method: 'post',
+//           body: JSON.stringify({
+//             value: buttons[i].value,
+//             table: table,
+//           }),
+//           headers: { 'Content-Type': 'application/json' },
+//         });
+//         console.log('Completed!', response);
+//         // window.reload();
+//         // location.reload();
         
-      } 
-  );
+//       } 
+//   );
+// }
+
+
+
+  if (document.readyState == 'loading') {
+    document.addEventListener('DOMContentLoaded', ready)
+} else {
+    ready()
 }
 
+function ready() {
+    var removeCartItemButtons = document.getElementsByClassName('btn-danger')
+    for (var i = 0; i < removeCartItemButtons.length; i++) {
+        var button = removeCartItemButtons[i]
+        button.addEventListener('click', removeCartItem)
+    }
 
+    var quantityInputs = document.getElementsByClassName('cart-quantity-input')
+    for (var i = 0; i < quantityInputs.length; i++) {
+        var input = quantityInputs[i]
+        input.addEventListener('change', quantityChanged)
+    }
+
+    var addToCartButtons = document.getElementsByClassName('shop-item-button')
+    for (var i = 0; i < addToCartButtons.length; i++) {
+        var button = addToCartButtons[i]
+        button.addEventListener('click', addToCartClicked)
+    }
+
+    document.getElementsByClassName('btn-purchase')[0].addEventListener('click', purchaseClicked)
+}
+
+function purchaseClicked() {
+    alert('Thank you for your purchase')
+    var cartItems = document.getElementsByClassName('cart-items')[0]
+    while (cartItems.hasChildNodes()) {
+        cartItems.removeChild(cartItems.firstChild)
+    }
+    updateCartTotal()
+}
+
+function removeCartItem(event) {
+    var buttonClicked = event.target
+    buttonClicked.parentElement.parentElement.remove()
+    updateCartTotal()
+}
+
+function quantityChanged(event) {
+    var input = event.target
+    if (isNaN(input.value) || input.value <= 0) {
+        input.value = 1
+    }
+    updateCartTotal()
+}
+
+function addToCartClicked(event) {
+  // console.log("click res");
+  // event.preventDefault();
+    var button = event.target 
+    var shopItem = button.parentElement;
+    var title = shopItem.getElementsByClassName('item-name')[0].innerText
+    var price = shopItem.getElementsByClassName('item-price')[0].innerText
+    // var imageSrc = shopItem.getElementsByClassName('shop-item-image')[0].src
+    console.log(title, price);
+    addItemToCart(title, price) //imageSrc needed
+    updateCartTotal()
+}
+
+function addItemToCart(title, price, imageSrc = "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2d%2FPunch_Neapolitan_Pizza_Margherita.jpg&f=1&nofb=1") {
+    var cartRow = document.createElement('div')
+    cartRow.classList.add('cart-row')
+    var cartItems = document.getElementsByClassName('cart-items')[0]
+    var cartItemNames = cartItems.getElementsByClassName('cart-item-title')
+    for (var i = 0; i < cartItemNames.length; i++) {
+        if (cartItemNames[i].innerText == title) {
+            alert('This item is already added to the cart')
+            return
+        }
+    }
+    var cartRowContents = `
+        <div class="cart-item cart-column">
+            <img class="cart-item-image" src="${imageSrc}" width="50" height="50">
+            <span class="cart-item-title">${title}</span>
+        </div>
+        <span class="cart-price cart-column">${price}</span>
+        <div class="cart-quantity cart-column">
+            <input class="cart-quantity-input" type="number" value="1">
+            <button class="btn btn-danger" type="button">REMOVE</button>
+        </div>`
+    cartRow.innerHTML = cartRowContents
+    cartItems.append(cartRow)
+    cartRow.getElementsByClassName('btn-danger')[0].addEventListener('click', removeCartItem)
+    cartRow.getElementsByClassName('cart-quantity-input')[0].addEventListener('change', quantityChanged)
+}
+
+function updateCartTotal() {
+    var cartItemContainer = document.getElementsByClassName('cart-items')[0]
+    var cartRows = cartItemContainer.getElementsByClassName('cart-row')
+    var total = 0
+    for (var i = 0; i < cartRows.length; i++) {
+        var cartRow = cartRows[i]
+        var priceElement = cartRow.getElementsByClassName('cart-price')[0]
+        var quantityElement = cartRow.getElementsByClassName('cart-quantity-input')[0]
+        var price = parseFloat(priceElement.innerText.replace('$', ''))
+        var quantity = quantityElement.value
+        total = total + (price * quantity)
+    }
+    total = Math.round(total * 100) / 100
+    document.getElementsByClassName('cart-total-price')[0].innerText = '$' + total
+}
 </script>
 
 <!-- <div class="container row d-flex justify-content-center">
