--- a/views/publicMenu.ejs
+++ b/views/publicMenu.ejs
@@ -6,47 +6,25 @@
         <% for (let i=0; i<menu.length; i++){ %>
           <li class="list-group-item text-center">
               <span class="lead mb-3 item-name"> <%= menu[i].itemName %> - </span>
-              <span class="lead mb-3 item-price">₹ <%= menu[i].itemPrice %> </span>
+              <span class="lead mb-3 item-price">₹<%= menu[i].itemPrice %> </span>
               <button class="orderItem" value="<%= menu[i].itemName %>">Order this!</button>
           </li>
         <% } %>
 </ul>
 
 <!-- cart -->
-<section class="card row d-flex">
+<section class="card row d-flex pt-5">
             <h2 class="section-header d-block mx-auto">CART</h2>
-            <div class="cart-row d-block mx-auto">
+            <!-- <div class="cart-row d-block mx-auto">
                 <span class="cart-item cart-header cart-column">ITEM</span>
                 <span class="cart-price cart-header cart-column">PRICE</span>
                 <span class="cart-quantity cart-header cart-column">QUANTITY</span>
-            </div>
+            </div> -->
             <div class="cart-items d-block mx-auto">
-                <div class="cart-row">
-                    <div class="cart-item cart-column">
-                        <img class="cart-item-image" src="Images/Shirt.png" width="100" height="100">
-                        <span class="cart-item-title">T-Shirt</span>
-                    </div>
-                    <span class="cart-price cart-column">$19.99</span>
-                    <div class="cart-quantity cart-column">
-                        <input class="cart-quantity-input" type="number" value="1">
-                        <button class="btn btn-danger" type="button">REMOVE</button>
-                    </div>
-                </div>
-                <div class="cart-row">
-                    <div class="cart-item cart-column">
-                        <img class="cart-item-image" src="Images/Album 3.png" width="100" height="100">
-                        <span class="cart-item-title">Album 3</span>
-                    </div>
-                    <span class="cart-price cart-column">$9.99</span>
-                    <div class="cart-quantity cart-column">
-                        <input class="cart-quantity-input" type="number" value="2">
-                        <button class="btn btn-danger" type="button">REMOVE</button>
-                    </div>
-                </div>
             </div>
             <div class="cart-total">
                 <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price">$39.97</span>
+               <span class="cart-total-price">₹ 0.00</span>
             </div>
             <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
         </section>
@@ -169,8 +147,8 @@ function addItemToCart(title, price, imageSrc = "https://external-content.duckdu
         <div class="cart-item cart-column">
             <img class="cart-item-image" src="${imageSrc}" width="50" height="50">
             <span class="cart-item-title">${title}</span>
+            <span class="cart-price cart-column">${price}</span>
         </div>
-        <span class="cart-price cart-column">${price}</span>
         <div class="cart-quantity cart-column">
             <input class="cart-quantity-input" type="number" value="1">
             <button class="btn btn-danger" type="button">REMOVE</button>
@@ -189,12 +167,12 @@ function updateCartTotal() {
         var cartRow = cartRows[i]
         var priceElement = cartRow.getElementsByClassName('cart-price')[0]
         var quantityElement = cartRow.getElementsByClassName('cart-quantity-input')[0]
-        var price = parseFloat(priceElement.innerText.replace('$', ''))
+        var price = parseFloat(priceElement.innerText.replace('₹', ''))
         var quantity = quantityElement.value
         total = total + (price * quantity)
     }
     total = Math.round(total * 100) / 100
-    document.getElementsByClassName('cart-total-price')[0].innerText = '$' + total
+    document.getElementsByClassName('cart-total-price')[0].innerText = '₹' + total
 }
 </script>
 
