--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/litera/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="app.css">
     <title>Nodejs Passport</title>
   </head>
   <body>
