--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,7 @@
     <title>Nodejs Passport</title>
   </head>
   <body>
+    <img src="pexels-photo-744780.jpeg" class="background-img img-responsive"/>
     <%- include("./partials/navbar.ejs"); -%> 
     <div class="container">
         <%- body %>
