--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,18 +19,17 @@
          </div>
          </div>
   </ul>
-  <div class=" card col-sm p-4">
+  <div class="card row col-sm p-4 justify-content-center">
     <form action="/dashboard" method="POST">
       <input type="text" id="tablenumber" name="tablenumber" 
-        placeholder="enter table number.." class="form-control pb-2"> 
-      <button class="btn btn-info sm" id="tablesubmit" type="submit">show qr code!</button>
+        placeholder="enter table number here" class="form-control p-4"> 
+        <div class="row-md-2 p-2">
+      <button class="btn btn-primary sm" id="tablesubmit" type="submit">show qr code!</button>
+        </div>
     </form>
     <img alt="Menu barcode"
     src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=<%= barcode %>"
     class="rounded mx-auto d-block pt-5 pb-2" >
     <p class="text-muted text-center">Save/Print this image for <br>customer's to open your menu!</p>
-    <script>
-     
-    </script>
 </div>
 </div>
