--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark">
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #05a8aa;">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5ca4a9;">
             <a class="navbar-brand" href="#">eMenu - paperless menus start here</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
           </nav>
       </div>
     </div>
-    <nav class="navbar navbar-light" style="background-color: #05a8aa;">
+    <nav class="navbar navbar-light" style="background-color: #5ca4a9;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
