--- a/public/app.css
+++ b/public/app.css
@@ -11,6 +11,15 @@
 
 } */
 
+body {
+    background-image: url("./linear-flat-fast-food-icons-seamless-pattern_1416-502.jpg");
+    background-size: 40vw;
+}
+
+.container-fluid {
+    margin: 10vh 2vw;
+}
+
 .background-img {
     height: 100%;
     width: 100%;
@@ -19,6 +28,7 @@
     overflow: hidden;
     z-index: -100;
 }
+
 .card {
     background-color: #e6ebe0;
 }
