--- a/views/publicMenu.ejs
+++ b/views/publicMenu.ejs
@@ -1,5 +1,5 @@
 <div class="card row d-inline justify-content-center">
-<h1 class="lead md-2">Your table is : <%= table %></h1>
+<h1 class="md-2 p-3 bg-secondary">Your table is : <%= table %></h1>
 <ul class="card list-group">
     <!-- <div class="col-md-6 m-auto"> -->
         <h1 class="mt-4 text-center">Menu by <bold> <%= name %></bold></h1>
