--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,14 +15,12 @@
       href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/litera/bootstrap.min.css"
     />
     <link rel="stylesheet" href="/app.css" />
-    <title>Nodejs Passport</title>
+    <title>eMenu - Levinson</title>
   </head>
   <body>
     <!-- <img src="pexels-photo-744780.jpeg" class="background-img img-responsive"/> -->
-    <%- include("./partials/navbar.ejs"); -%> 
-    <div class="container">
-        <%- body %>
-    </div>
+    <%- include("./partials/navbar.ejs"); -%>
+    <div class="container"><%- body %></div>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
